# bash_command_finder

./: .gitignore  Cargo.toml  Makefile  README.md  bash_command_finder.py  cmd_examples.json  main.py  pyproject.toml  requirements.txt
src/: bash_command_finder.py  main.rs
tests/: benchmark_levenshtein.py
