[package]
name = "bash_command_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clipboard = "0.5.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde_json = "1.0.91"
